# picads-backend

./: .gitignore  Dockerfile  README.md  create_tables.py  environment.yml  main.py  main_production.py  pyproject.toml  test_profile_flow.py  verify_db_connection.py
app/: __init__.py  auth.py  config.py  database.py  models.py  routes.py  schemas.py  services.py  storage.py
app/routes/: __init__.py  ads.py  assets.py  brand.py  core.py  credits.py  generation.py  profile.py  social_media.py  subscription.py
app/schemas/: __init__.py  ads.py  assets.py  base.py  brand.py  credits.py  profile.py  social_media.py  usage.py
app/services/: __init__.py  assets.py  brand.py  credits.py  generation.py  profile.py  social_media.py  stripe.py
