[tool.poetry]
name = "picads-backend"
version = "1.0.0"
description = "Backend API for Picads - AI-powered ad generation platform"
authors = ["Picads Team <team@picads.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11.4"
# Core FastAPI and server dependencies
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
gunicorn = "^23.0.0"
# Data validation and settings
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
# Environment and configuration
python-dotenv = "^1.0.0"
# Database dependencies
sqlalchemy = "^2.0.0"
asyncpg = "^0.30.0"
greenlet = "^3.0.0"
# HTTP clients
httpx = "^0.28.0"
requests = "^2.32.0"
# Authentication and security
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
# Form handling
python-multipart = "^0.0.20"
# Email validation
email-validator = "^2.2.0"
# External services
supabase = "^2.9.0"
stripe = "^12.0.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
# Code formatting and linting
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry scripts removed - use direct commands instead
# Use: poetry run <command> directly

# Code formatting configuration
[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 